--- a/sample/docker-compose.yml
+++ b/sample/docker-compose.yml
@@ -3,14 +3,17 @@ version: "3"
 services:
   app:
     image: cbsan/flutter
+    working_dir: /usr/src
     volumes:
-      - .:/usr/src
+      - ./my_app:/usr/src
       - /dev:/dev
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - storage_avd:/opt/android/.android/avd
+      - storage_avd:/root/.android/avd
+      - storage_gradle:/root/.gradle
     tty: true
     privileged: true
     environment:
       DISPLAY: $DISPLAY
 volumes:
   storage_avd:
+  storage_gradle:
